# ff_game

./: CMakeLists.txt  README.md  conanfile.py
cmake/: Findsdl3.cmake
include/game/Config/: Config.hpp
include/game/ParticleSystem/: ParticleSystem.hpp
include/game/SDLApplication/: SDLApplication.hpp
scripts/: all_builds.sh  release_build.sh  run.sh
src/: main.cpp
